--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,5 +1,5 @@
 [tryton]
-version=4.9.0
+version=5.1.0
 depends:
     company
     product
@@ -8,3 +8,4 @@ depends:
 xml:
     product.xml
     stock.xml
+    messages.xml
